--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -128,7 +128,7 @@
          <% @items.each do |item| %>
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <li class='list'>
-        <%= link_to "#" do %>
+        <%= link_to item_path(item.id) do %>
             <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" %>
             <%# 商品が売れていればsold outを表示しましょう %>
@@ -139,7 +139,7 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= @items.name %>
+            <%= item.name %>
           </h3>
           <div class='item-price'>
             <span><%= item.price %>円<br>(税込み)</span>
